Bug 298380 - versioning settings active after digikam start even if versioning is switched off
Summary: versioning settings active after digikam start even if versioning is switched...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-ImageEditor (other bugs)
Version First Reported In: 2.6.0
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-18 21:52 UTC by Johannes Wienke
Modified: 2022-02-02 05:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Wienke 2012-04-18 21:52:07 UTC
The detailed versioning settings (which versions to show etc.) are enabled in the settings dialog after a fresh digikam start and can be changed by the user even if the versioning is switched off completely. However I suspect they should be switched off in that case because when checking the general enable button twice they are disabled.

Reproducible: Always




trunk version
Comment 1 caulier.gilles 2012-04-19 05:22:02 UTC
1.4.0 version really ???

Gilles Caulier
Comment 2 Johannes Wienke 2012-04-19 07:31:08 UTC
Huh, no idea how this appeared there. Is this the default for the form?
Comment 3 Marcel Wiesweg 2012-05-06 15:48:24 UTC
Git commit 2a85298b8b83284eaf6a3c972e57d663f7ef02f2 by Marcel Wiesweg.
Committed on 06/05/2012 at 17:41.
Pushed by mwiesweg into branch 'master'.

Signal toggled() to apply state will not be emitted when the per default unchecked checkbox remains unchecked.
Call explicitly.

M  +3    -1    NEWS
M  +2    -0    utilities/setup/setupversioning.cpp

http://commits.kde.org/digikam/2a85298b8b83284eaf6a3c972e57d663f7ef02f2