Signal toggled() to apply state will not be emitted when the per default unchecked checkbox remains unchecked. Call explicitly.

BUG: 298380